--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,8 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Dinh Thanh Mai
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+Dieses programm gibt zahlen von 1 bis max_number aus. 
+Wenn die Zahlen durch fizz_number bzw. buzz_number teilbar sind, dann werden fizz_nam bzw. buzz_name ausgegeben. 
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
